# OpenCL_Template

./: .gitignore  CMakeLists.txt  Readme.md
HelloOpenCL/: CMakeLists.txt  array_addition.cpp
